--- a/package.json
+++ b/package.json
@@ -3,30 +3,31 @@
   "version": "0.0.1",
   "dependencies": {},
   "devDependencies": {
+    "connect-livereload": "~0.3.2",
+    "css-parse": "~1.5.3",
     "grunt": "~0.4.2",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-jshint": "~0.8.0",
-    "grunt-contrib-htmlmin": "~0.1.3",
-    "grunt-contrib-uglify": "~0.3.2",
-    "grunt-contrib-cssmin": "~0.7.0",
-    "grunt-contrib-less": "~0.9.0",
-    "grunt-contrib-imagemin": "~0.5.0",
-    "grunt-contrib-jade": "~0.9.1",
+    "grunt-cli": "^0.1.13",
+    "grunt-combine-media-queries": "~1.0.9",
     "grunt-concurrent": "~0.4.3",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-combine-media-queries": "~1.0.9",
-    "grunt-svgmin": "~0.3.0",
-    "css-parse": "~1.5.3",
-    "matchdep": "~0.3.0",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-livereload": "~0.1.2",
+    "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-connect": "~0.6.0",
-    "grunt-open": "~0.2.3",
-    "grunt-usemin": "~2.0.2",
     "grunt-contrib-copy": "~0.5.0",
-    "connect-livereload": "~0.3.2",
-    "time-grunt": "^0.2.10",
-    "grunt-newer": "^0.6.1"
+    "grunt-contrib-cssmin": "~0.7.0",
+    "grunt-contrib-htmlmin": "~0.1.3",
+    "grunt-contrib-imagemin": "~0.5.0",
+    "grunt-contrib-jade": "~0.9.1",
+    "grunt-contrib-jshint": "~0.8.0",
+    "grunt-contrib-less": "~0.9.0",
+    "grunt-contrib-livereload": "~0.1.2",
+    "grunt-contrib-uglify": "~0.3.2",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-newer": "^0.6.1",
+    "grunt-open": "~0.2.3",
+    "grunt-svgmin": "~0.3.0",
+    "grunt-usemin": "~2.0.2",
+    "matchdep": "~0.3.0",
+    "time-grunt": "^0.2.10"
   },
   "engines": {
     "node": ">=0.10.0"
